adicao da comunicacao ,estilizacao e validacoes
